--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation "com.google.firebase:firebase-auth:16.0.5"
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 }
 apply plugin: 'com.google.gms.google-services'
