--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.yalantis:ucrop:2.2.2'
+    implementation 'id.zelory:compressor:2.1.0'
+
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation "com.google.firebase:firebase-auth:16.0.5"
     implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 }
 apply plugin: 'com.google.gms.google-services'
