--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,12 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
         <activity android:name=".ForgotPassword" />
-        <activity android:name=".MakePost"></activity>
+        <activity android:name=".MakePost" />
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".ProfileSettings"></activity>
     </application>
 
 </manifest>
